rocket_sunset/tests/build/invalid_ident.stderr
error: Expected 'link' or 'sunset' identifiers.
  --> tests/build/invalid_ident.rs:11:39
   |
11 | #[deprecation("2024-12-31T23:59:59Z", invalid = "uri_placeholder")]
   |                                       ^^^^^^^

warning: unused import: `DeprecatedResponder`
 --> tests/build/invalid_ident.rs:7:5
  |
7 |     DeprecatedResponder,
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0423]: expected function, found struct `index`
  --> tests/build/invalid_ident.rs:12:19
   |
10 | #[get("/")]
   | -----------
   | |
   | `index` defined here
   | in this procedural macro expansion
11 | #[deprecation("2024-12-31T23:59:59Z", invalid = "uri_placeholder")]
12 | pub fn index() -> &'static str {
   |                   ^ help: use struct literal syntax instead: `index {}`
   |
   = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)
